--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: Lahman
 Type: Package
 Title: Sean Lahman's Baseball Database
-Version: 1.0-11
-Date: 2013-03-03
+Version: 2.0-0
+Date: 2013-04-08
 Authors@R: c(person(given = "Michael", family = "Friendly", role=c("aut", "cre"), email="friendly@yorku.ca"),
             person(given = "Dennis", family = "Murphy", role="ctb"))
 Author: Michael Friendly and Dennis Murphy
 Maintainer: Michael Friendly <friendly@yorku.ca>
 Description: This package provides the tables from Sean Lahman's Baseball Database as a set of R data.frames.
-    It uses the data on pitching, hitting and fielding performance and other tables from 1871 through 2010, as recorded
-    in version 5.8 of the database.
+    It uses the data on pitching, hitting and fielding performance and other tables from 1871 through 2012, as recorded
+    in the 2012 version of the database.
 Depends: R (>= 2.10)
 Suggests: lattice, ggplot2, googleVis, data.table, vcd, plyr
 License: GPL
