--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -11,7 +11,7 @@ Description: This package provides the tables from Sean Lahman's Baseball Databa
     It uses the data on pitching, hitting and fielding performance and other tables from 1871 through 2012, as recorded
     in the 2012 version of the database.
 Depends: R (>= 2.10)
-Suggests: lattice, ggplot2, googleVis, data.table, vcd, plyr, reshape2
+Suggests: lattice, ggplot2, googleVis, data.table, vcd, plyr, reshape2, zipcode
 License: GPL
 LazyLoad: yes
 LazyData: yes
