--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: Lahman
 Type: Package
 Title: Sean Lahman's Baseball Database
-Version: 2.0-1
+Version: 2.0-2
 Date: 2013-04-18
 Authors@R: c(person(given = "Michael", family = "Friendly", role=c("aut", "cre"), email="friendly@yorku.ca"),
-            person(given = "Dennis", family = "Murphy", role="ctb"))
-Author: Michael Friendly and Dennis Murphy
+            person(given = "Dennis", family = "Murphy", role="ctb"),
+            person(given = "Martin", family = "Monkman", role="ctb")
+            )
+Author: Michael Friendly and Dennis Murphy and Martin Monkman
 Maintainer: Michael Friendly <friendly@yorku.ca>
 Description: This package provides the tables from Sean Lahman's Baseball Database as a set of R data.frames.
     It uses the data on pitching, hitting and fielding performance and other tables from 1871 through 2012, as recorded
@@ -13,6 +15,7 @@ Description: This package provides the tables from Sean Lahman's Baseball Databa
 Depends: R (>= 2.10)
 Suggests: lattice, ggplot2, googleVis, data.table, vcd, plyr, reshape2, zipcode
 License: GPL
+Url: http://lahman.r-forge.r-project.org/
 LazyLoad: yes
 LazyData: yes
 
