--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -15,7 +15,7 @@ Description: This package provides the tables from Sean Lahman's Baseball Databa
 Depends: R (>= 2.10)
 Suggests: lattice, ggplot2, googleVis, data.table, vcd, plyr, reshape2, zipcode
 License: GPL
-Url: http://lahman.r-forge.r-project.org/
+URL: http://lahman.r-forge.r-project.org/
 LazyLoad: yes
 LazyData: yes
 
