--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,19 +1,23 @@
 Package: Lahman
 Type: Package
 Title: Sean Lahman's Baseball Database
-Version: 2.0-4
-Date: 2013-06-03
-Authors@R: c(person(given = "Michael", family = "Friendly", role=c("aut", "cre"), email="friendly@yorku.ca"),
-            person(given = "Dennis", family = "Murphy", role="ctb"),
-            person(given = "Martin", family = "Monkman", role="ctb")
-            )
-Author: Michael Friendly and Dennis Murphy and Martin Monkman
+Version: 3.0-0
+Date: 2014-07-22
+Authors@R: c(person(given = "Michael", family = "Friendly",
+        role=c("aut", "cre"), email="friendly@yorku.ca"), 
+        person(given= "Dennis", family = "Murphy", role="ctb"), 
+        person(given ="Martin", family = "Monkman", role="ctb"),
+        person(given ="Chris", family = "Dalzell", role="ctb"))
+Author: Michael Friendly [aut, cre], Dennis Murphy [ctb], Martin Monkman [ctb], Chris Dalzell [ctb]
 Maintainer: Michael Friendly <friendly@yorku.ca>
-Description: This package provides the tables from Sean Lahman's Baseball Database as a set of R data.frames.
-    It uses the data on pitching, hitting and fielding performance and other tables from 1871 through 2012, as recorded
-    in the 2012 version of the database.
+Description: This package provides the tables from Sean Lahman's
+        Baseball Database as a set of R data.frames.  It uses the data
+        on pitching, hitting and fielding performance and other tables
+        from 1871 through 2013, as recorded in the 2014 version of the
+        database.
 Depends: R (>= 2.10)
-Suggests: lattice, ggplot2, googleVis, data.table, vcd, plyr, reshape2, zipcode
+Suggests: lattice, ggplot2, googleVis, data.table, vcd, plyr, reshape2,
+        zipcode
 License: GPL
 URL: http://lahman.r-forge.r-project.org/
 LazyLoad: yes
